tests/snapshots/files__fib_shape-peg.snap
---
source: tests/files.rs
expression: result.visualization
---
digraph G {
subgraph {{
node [ordering=out];
0 [label="Θ_11"];
1 [label="Θ_11"];
2 [label="Θ_11"];
3 [label="Θ_11"];
4 [label="pass_11"];
5 [label="no-op"];
6 [label="no-op"];
7 [label="no-op"];
8 [label="no-op"];
9 [label="arg 1"];
10 [label="lt"];
11 [label="int"];
12 [label="int"];
13 [label="add"];
14 [label="Φ"];
15 [label="Φ"];
16 [label="Φ"];
17 [label="Φ"];
18 [label="Φ"];
19 [label="int"];
20 [label="int"];
21 [label="arg 0"];
22 [label="eval_11"];
23 [label="eval_11"];
24 [label="eval_11"];
25 [label="eval_11"];
26 [label="lt"];
27 [label="int"];
28 [label="int"];
29 [label="add"];
30 [label="Φ"];
31 [label="Φ"];
32 [label="Φ"];
33 [label="Φ"];
34 [label="Φ"];
35 [label="lt"];
36 [label="int"];
37 [label="int"];
38 [label="add"];
39 [label="Φ"];
40 [label="Φ"];
41 [label="Φ"];
42 [label="Φ"];
43 [label="Φ"];
44 [label="lt"];
45 [label="int"];
46 [label="int"];
47 [label="add"];
48 [label="Φ"];
49 [label="Φ"];
50 [label="Φ"];
51 [label="Φ"];
52 [label="Φ"];
53 [label="lt"];
54 [label="int"];
55 [label="int"];
56 [label="add"];
57 [label="Φ"];
58 [label="Φ"];
59 [label="Φ"];
60 [label="Φ"];
61 [label="Φ"];
0 -> 9;
0 -> 14;
1 -> 19;
1 -> 16;
2 -> 20;
2 -> 17;
3 -> 21;
3 -> 18;
4 -> 15;
5 -> 30;
6 -> 41;
7 -> 51;
8 -> 61;
10 -> 1;
10 -> 3;
13 -> 1;
13 -> 2;
14 -> 10;
14 -> 0;
14 -> 0;
15 -> 10;
15 -> 11;
15 -> 12;
16 -> 10;
16 -> 13;
16 -> 1;
17 -> 10;
17 -> 2;
17 -> 2;
18 -> 10;
18 -> 3;
18 -> 3;
22 -> 0;
22 -> 4;
23 -> 1;
23 -> 4;
24 -> 2;
24 -> 4;
25 -> 3;
25 -> 4;
26 -> 23;
26 -> 25;
29 -> 23;
29 -> 24;
30 -> 26;
30 -> 22;
30 -> 22;
31 -> 26;
31 -> 27;
31 -> 28;
32 -> 26;
32 -> 29;
32 -> 23;
33 -> 26;
33 -> 24;
33 -> 24;
34 -> 26;
34 -> 25;
34 -> 25;
35 -> 23;
35 -> 25;
38 -> 23;
38 -> 24;
39 -> 35;
39 -> 22;
39 -> 22;
40 -> 35;
40 -> 36;
40 -> 37;
41 -> 35;
41 -> 38;
41 -> 23;
42 -> 35;
42 -> 24;
42 -> 24;
43 -> 35;
43 -> 25;
43 -> 25;
44 -> 23;
44 -> 25;
47 -> 23;
47 -> 24;
48 -> 44;
48 -> 22;
48 -> 22;
49 -> 44;
49 -> 45;
49 -> 46;
50 -> 44;
50 -> 47;
50 -> 23;
51 -> 44;
51 -> 24;
51 -> 24;
52 -> 44;
52 -> 25;
52 -> 25;
53 -> 23;
53 -> 25;
56 -> 23;
56 -> 24;
57 -> 53;
57 -> 22;
57 -> 22;
58 -> 53;
58 -> 54;
58 -> 55;
59 -> 53;
59 -> 56;
59 -> 23;
60 -> 53;
60 -> 24;
60 -> 24;
61 -> 53;
61 -> 25;
61 -> 25;
}
}

