tests/snapshots/files__fib_shape_structured.snap
---
source: tests/files.rs
expression: "format!(\"{}\", structured)"
---
main {
block:
 one: int = const 1;
 i: int = const 0;
 break 0
while true:
 block:
  block:
   cond: bool = lt i input;
   if cond:
    break 2
   else:
    break 1
  block:
   donebody: int = const 1;
   return

 i: int = add i one;
 bodyvar: int = const 1;
 break 0
}
