tests/snapshots/files__five_call_nestings-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@one {
  c0_: int = const 4;
  print c0_;
  ret;
}
@two {
  c0_: int = const 4;
  print c0_;
  ret;
}
@three {
  c0_: int = const 4;
  print c0_;
  ret;
}
@four {
  c0_: int = const 4;
  print c0_;
  ret;
}
@main {
  call @four;
  ret;
}
