tests/snapshots/files__flatten_loop-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 10 10
@main(v0: int, v1: int) {
  c2_: int = const 0;
  c3_: int = const 1;
  v4_: int = id c2_;
  v5_: int = id c3_;
  v6_: int = id v1;
  v7_: int = id v0;
.b8_:
  v9_: bool = lt v4_ v7_;
  v10_: int = id v4_;
  v11_: int = id v5_;
  v12_: int = id v6_;
  v13_: int = id v7_;
  br v9_ .b14_ .b15_;
.b14_:
  c16_: int = const 0;
  v17_: bool = lt c16_ v6_;
  v18_: int = id v4_;
  v19_: int = id v5_;
  v20_: int = id c16_;
  v21_: int = id v6_;
  v22_: int = id v7_;
  br v17_ .b23_ .b24_;
.b23_:
  v25_: int = id v4_;
  v26_: int = id v5_;
  v27_: int = id c16_;
  v28_: int = id v6_;
  v29_: int = id v7_;
.b30_:
  v31_: int = mul v25_ v28_;
  v32_: int = add v27_ v31_;
  print v32_;
  v33_: int = add v26_ v27_;
  v34_: bool = lt v33_ v28_;
  v35_: int = id v25_;
  v36_: int = id v26_;
  v27_: int = id v33_;
  v37_: int = id v28_;
  v38_: int = id v29_;
  v25_: int = id v35_;
  v26_: int = id v36_;
  v28_: int = id v37_;
  v29_: int = id v38_;
  br v34_ .b30_ .b39_;
.b39_:
  v18_: int = id v25_;
  v19_: int = id v26_;
  v20_: int = id v27_;
  v21_: int = id v28_;
  v22_: int = id v29_;
.b24_:
  v40_: int = add v4_ v5_;
  v10_: int = id v40_;
  v11_: int = id v5_;
  v12_: int = id v6_;
  v13_: int = id v7_;
  v4_: int = id v10_;
  v5_: int = id v11_;
  v6_: int = id v12_;
  v7_: int = id v13_;
  jmp .b8_;
.b15_:
  v4_: int = id v10_;
  v5_: int = id v11_;
  v6_: int = id v12_;
  v7_: int = id v13_;
  print v4_;
  ret;
}
