tests/snapshots/files__flatten_loop-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 10 10
@main(v0: int, v1: int) {
.b2_:
  c3_: int = const 0;
  c4_: int = const 1;
  v5_: int = id c3_;
  v6_: int = id c4_;
  v7_: int = id v1;
  v8_: int = id v0;
.b9_:
  v10_: bool = lt v5_ v8_;
  v11_: int = id v5_;
  v12_: int = id v6_;
  v13_: int = id v7_;
<<<<<<< HEAD
  v14_: int = id v8_;
  br v10_ .b15_ .b16_;
.b15_:
  c17_: int = const 0;
  v18_: bool = lt c17_ v7_;
  v19_: int = id v5_;
  v20_: int = id v6_;
  v21_: int = id c17_;
  v22_: int = id v7_;
  v23_: int = id v8_;
  br v18_ .b24_ .b25_;
.b24_:
  v26_: int = mul v5_ v7_;
  v27_: int = id v5_;
  v28_: int = id v6_;
  v29_: int = id c17_;
  v30_: int = id v7_;
  v31_: int = id v8_;
  v32_: int = id v26_;
.b33_:
  v34_: int = add v29_ v32_;
  print v34_;
  v35_: int = add v28_ v29_;
  v36_: bool = lt v35_ v30_;
  v27_: int = id v27_;
  v28_: int = id v28_;
  v29_: int = id v35_;
  v30_: int = id v30_;
  v31_: int = id v31_;
  v32_: int = id v32_;
  br v36_ .b33_ .b37_;
.b37_:
  v19_: int = id v5_;
  v20_: int = id v6_;
  v21_: int = id v29_;
  v22_: int = id v7_;
  v23_: int = id v8_;
.b25_:
  v38_: int = add v5_ v6_;
  v11_: int = id v38_;
=======
  br v10_ .b14_ .b15_;
.b14_:
  c16_: int = const 0;
  v17_: int = id v5_;
  v18_: int = id v6_;
  v19_: int = id c16_;
  v20_: int = id v7_;
.b21_:
  v22_: bool = lt v19_ v20_;
  v23_: int = id v17_;
  v24_: int = id v18_;
  v25_: int = id v19_;
  v26_: int = id v20_;
  br v22_ .b27_ .b28_;
.b27_:
  v29_: int = mul v17_ v20_;
  v30_: int = add v19_ v29_;
  print v30_;
  v31_: int = add v18_ v19_;
  v23_: int = id v17_;
  v24_: int = id v18_;
  v25_: int = id v31_;
  v26_: int = id v20_;
  v17_: int = id v23_;
  v18_: int = id v24_;
  v19_: int = id v25_;
  v20_: int = id v26_;
  jmp .b21_;
.b28_:
  v17_: int = id v23_;
  v18_: int = id v24_;
  v19_: int = id v25_;
  v20_: int = id v26_;
  v32_: int = add v5_ v6_;
  v11_: int = id v32_;
>>>>>>> bd5b3865 (snapshots)
  v12_: int = id v6_;
  v13_: int = id v7_;
  v5_: int = id v11_;
  v6_: int = id v6_;
  v7_: int = id v7_;
  v8_: int = id v8_;
  jmp .b9_;
.b15_:
  v5_: int = id v11_;
  v6_: int = id v6_;
  v7_: int = id v7_;
  v8_: int = id v8_;
  print v5_;
  ret;
}
