tests/snapshots/files__flatten_loop-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int, v1: int) {
  v4: int = const 0;
  v6: int = const 1;
  v10: int = id v4;
  v11: int = id v6;
  v12: int = id v1;
  v13: int = id v0;
  jmp .__15__;
.__120__:
  v10: int = id v32;
  v11: int = id v34;
  v12: int = id v35;
  v13: int = id v36;
  br v17 .__15__ .__128__;
.__109__:
  v112: int = add v10 v11;
  v114: bool = const true;
  v32: int = id v112;
  v33: bool = id v114;
  v34: int = id v11;
  v35: int = id v49;
  v36: int = id v50;
  jmp .__120__;
.__99__:
  v46: int = id v46;
  v47: int = id v47;
  v48: int = id v75;
  v49: int = id v76;
  v50: int = id v77;
  v51: int = id v51;
  br v55 .__53__ .__109__;
.__79__:
  v81: int = mul v46 v49;
  v84: int = add v81 v48;
  print v84;
  v90: bool = const true;
  v94: int = add v48 v47;
  v72: int = id v46;
  v73: int = id v47;
  v74: bool = id v90;
  v75: int = id v94;
  v76: int = id v49;
  v77: int = id v50;
  jmp .__99__;
.__64__:
  v67: bool = const false;
  v72: int = id v46;
  v73: int = id v47;
  v74: bool = id v67;
  v75: int = id v48;
  v76: int = id v49;
  v77: int = id v50;
  jmp .__99__;
.__53__:
  v55: bool = lt v48 v49;
  br v55 .__79__ .__64__;
.__38__:
  v41: int = const 0;
  v46: int = id v10;
  v47: int = id v11;
  v48: int = id v41;
  v49: int = id v12;
  v50: int = id v13;
  v51: int = id v10;
  jmp .__53__;
.__25__:
  v27: bool = const false;
  v32: int = id v10;
  v33: bool = id v27;
  v34: int = id v11;
  v35: int = id v12;
  v36: int = id v13;
  jmp .__120__;
.__15__:
  v17: bool = lt v10 v13;
  br v17 .__38__ .__25__;
.__128__:
  print v10;
}

