tests/snapshots/files__four_call_nestings-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@one {
.b0_:
  c1_: int = const 3;
  print c1_;
  ret;
}
@two {
.b0_:
  c1_: int = const 3;
  print c1_;
  ret;
}
@three {
.b0_:
  c1_: int = const 3;
  print c1_;
  ret;
}
@main {
.b0_:
  call @three;
  ret;
}
